# coot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  PLAN.md  RELEASING.md  SIGNING.md  deny.toml  dprint.jsonc  enlmkros2je2fg5umqlr5stejflkqano.darc  justfile  manifest
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
app/: .gitignore  Cargo.toml  tauri.conf.json
app/icons/: icon.icns
app/src/: lib.rs  main.rs
app/ui/: index.html  package.json  tsconfig.json  vite.config.ts
app/ui/src/: App.svelte  app.css  app.css.test.ts  main.ts
app/ui/src/lib/: ConnectionForm.svelte  ConnectionList.svelte  ConnectionNode.svelte  FanoutPicker.svelte  FanoutStatusBar.svelte  LibraryPanel.svelte  NameDialog.svelte  ParamBar.svelte  PasswordPrompt.svelte  ResultTabs.svelte  ResultsGrid.svelte  SavedQueryLibrary.svelte  SqlEditor.svelte  TabBar.svelte  ToastHost.svelte  VariablesLibrary.svelte  api.ts  columnWidths.svelte.ts  columnWidthsLogic.test.ts  columnWidthsLogic.ts  connectionFormLogic.test.ts  connectionFormLogic.ts  connections.svelte.ts  contextMenuLogic.test.ts  contextMenuLogic.ts  databases.svelte.ts  databasesLogic.test.ts  databasesLogic.ts  fanoutLogic.test.ts  fanoutLogic.ts  globalParams.svelte.ts  icons.ts  layout.svelte.ts  layoutLogic.test.ts  layoutLogic.ts  measureText.test.ts  measureText.ts  openScopedQuery.svelte.ts  paramBarLogic.test.ts  paramBarLogic.ts  (+24 more)
app/ui/src/lib/theme/: highlight.ts
app/ui/src/lib/tree/: ColumnLeaf.svelte  DatabaseNode.svelte  LoadingNote.svelte  ObjectTree.svelte  TableNode.svelte  ViewNode.svelte  columnLabel.test.ts  columnLabel.ts  refresh.svelte.ts  selectTopQuery.test.ts  selectTopQuery.ts  selection.svelte.ts  treeKey.test.ts  treeKey.ts
core/: Cargo.toml
core/examples/: dynamic_dump.rs  typed_probe.rs
core/src/: batch.rs  connection.rs  connection_store.rs  context.rs  error.rs  executor.rs  lib.rs  param_bind.rs  query.rs  query_store.rs  result.rs  schema.rs  session.rs  test_support.rs  types.rs
core/tests/: dev_box.rs
docs/superpowers/plans/: 2026-07-11-billz-lpb-connection-reuse.md  2026-07-12-85b-session-password.md  2026-07-12-d28.10-update-saved-query.md  2026-07-12-d28.7-scoped-run.md  (+9 more)
scripts/: setup-macos-signing.sh
(+13 files in other folders)
