[package]
name = "coot-app"
version = "0.1.0"
edition = "2024"
publish = false # personal, non-distributed app — never publish to a registry

[lib]
# Tauri v2 wants a lib (with run()) + a thin bin. `_lib` suffix keeps the lib crate
# name distinct from the bin on case-insensitive/Windows targets (harmless on macOS).
name = "coot_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
coot-core = { version = "0.1.0", path = "../core" }
thiserror = "2.0.18"
