[package]
name = "billz-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
keyring = "4.1.4"
mssql-client = "0.20.2"
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
uuid = "1.23.4"

[dev-dependencies]
bytes = "1.12.1"
serde_json = "1.0.150"
