[package]
name = "coot-core"
version = "0.1.0"
edition = "2024"
publish = false # personal, non-distributed app — never publish to a registry

[dependencies]
chrono = "0.4.45"
futures = "0.3.32"
keyring = "4.1.4"
mssql-client = "0.20.2"
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time"] }
uuid = "1.23.4"

[dev-dependencies]
bytes = "1.12.1"
serde_json = "1.0.150"
